2002-12-30  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/acsplit/acmerge.c:
	ignore attempts to merge stuff such as the AC_REVISION that I have embedded
	in vile's aclocal.m4

2002-02-16  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/hex/hex.c: add utf-8 output

	* src/hex/hex.c: indent'd

2002-02-10  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/acsplit/acmerge.c: add -v option

	* src/acsplit/acsplit.c: one remaining fix for "will finish" logic

	* src/acsplit/acsplit.c:
	add logic to force macros to be flushed out after the ending parenthesis or
	bracket, even if the next line is not dashes.  (Dashes are still needed to
	make a header comment separate from the macro contents).

	* src/acsplit/acsplit.c:
	improve verboseness a little by always emitting path:number for the interesting
	messages.  Add a usage message.

	* src/acsplit/acmerge.c: add logic to suppress dashes

	* src/acsplit/acmerge.c:
	fixes to avoid emitting a dashed line in the header when we see a blank line

	* src/acsplit/acsplit.c:
	since we don't have to worry about changequote() any more (autoconf 2.5x
	breaks it), add logic to check level of [] and (), so we can pick up boundary
	between macros without relying on dashes.  (They're still welcome, and are
	used if present).

	* src/acsplit/acmerge.c, src/acsplit/acsplit.c: indent'd

2001-04-22  Thomas E. Dickey  <dickey@clark.net>

	* src/acsplit/acmerge.c: oops - file-pointer leak.
	luckily, NetBSD is a little retarded...

2000-12-28  Thomas E. Dickey  <dickey@clark.net>

	* src/sue/sue.c: fix for broken glibc

2000-11-10  dickey@clark.net

	* src/newpath/newpath.c:
	on win32, spawn a subprocess with spawnvp() rather than execvp(), since
	the latter will execute more/less in parallel with the parent process.

	* src/newpath/newpath.c: DEBUG appears to be predefined on NT.

	* src/newpath/newpath.c: add -v option
	indent'd
	port to win32

2000-11-09  dickey@clark.net
